# crypto-dashboard

./: .gitignore  Cargo.toml  README.md
frontend/: package-lock.json  package.json
frontend/src/application/ports/: price-gateway.ts  price-stream.ts
frontend/src/application/use-cases/: get-extremes.ts  get-latest-prices.ts  get-series.ts
frontend/src/domain/: price.ts
frontend/src/infrastructure/: config.ts  container.ts
frontend/src/infrastructure/dto/: price-dto.ts
frontend/src/infrastructure/http/: http-price-gateway.ts
frontend/src/infrastructure/websocket/: websocket-price-stream.ts
frontend/src/pages/: index.astro
frontend/src/presentation/components/: DataExport.tsx  Extremes.tsx  MultiCoinChart.tsx  PriceCards.tsx  PriceCharts.tsx  ThemeToggle.tsx  WorldClocks.tsx
frontend/src/presentation/hooks/: UseAllSeries.ts  useExtremes.ts  useLivePrices.ts  usePrices.ts
frontend/src/presentation/layouts/: Base.astro
frontend/src/styles/: global.css
src/: lib.rs  main.rs
src/application/: mod.rs  ports.rs  use_cases.rs
src/domain/: entities.rs  errors.rs
src/infrastructure/: config.rs  mod.rs  scheduler.rs
src/infrastructure/persistence/: postgres.rs
src/presentation/: dto.rs  handlers.rs  mod.rs  router.rs  websocket.rs
